# itmo-llp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TASK-2.md  TASK-3.md  TASK.md  main.cpp
client/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  validate.hpp
dockerfiles/: Dockerfile.cpp-env-ubuntu
docs/: session-example.txt
query/: CMakeLists.txt  lexer.l  main.c  parser.y  types.h
server/: CMakeLists.txt  main.cpp
store/: CMakeLists.txt  main.cpp  store.cpp  store.h
store/api/: CMakeLists.txt  messages.h  node.h  storage.cpp  storage.h
store/dom/: CMakeLists.txt  node.cpp  node.h  store2.cpp  store2.h  value.cpp  value.h
store/file/: CMakeLists.txt  filesystem.cpp  filesystem.h
store/filesystem/: CMakeLists.txt  filesystem.h
store/fs/: CMakeLists.txt  file.cpp  file.h  file_manager.cpp  file_manager.h  filesystem.cpp  filesystem.h
store/inc/: store.h  store2.h
store/memory/: CMakeLists.txt  arena.cpp  arena.h  arena_alloc.cpp  arena_alloc.h  file_layout.h  memory_manager.cpp  memory_manager.h  mmap_manager.cpp  mmap_manager.h  offset.h  segment.cpp  segment.h
store/model/: CMakeLists.txt
store/query/: CMakeLists.txt  query.cpp  query.h
store/src/: store.cpp  store2.cpp
tests/: CMakeLists.txt
tests/query/: bench.txt
tests/store/: CMakeLists.txt  file_test.cpp  memory_manager_test.cpp  storage_test.cpp  store2_test.cpp  store_test.cpp
util/: util.h
